--- a/style.css/flex-estilo.css
+++ b/style.css/flex-estilo.css
@@ -16,20 +16,28 @@ header {
 .cabecera {
     display: flex;
 }
-.cabecera img {
-    height: 5rem;
+.logo{
+    display: flex;
+    box-sizing: border-box;
+    height: 4.9rem;
+
 }
 .cabecera h1 {
     background-image: linear-gradient(to top, #e99f17,#eaee1a );
     font-size: 4rem;
     text-align: center;
-    text-align: 5rem;
     letter-spacing: .3rem;
     font-family: 'Pirata One', cursive;
 }
 .navbar-expand-lg .navbar-nav {
     width: 100%;
     justify-content: space-around;
+}
+.navbar .container-fluid{
+    justify-content: flex-end;
+}
+.tituloMarea{
+    height: 5rem;
 }
 .tituloMarea h1 {
     position: absolute;
@@ -46,10 +54,10 @@ header {
 @keyframes ola {
     0%,
     100% {
-        clip-path: polygon( 0% 5%, 10% 40%, 33% 55%, 54% 55%, 70% 60%, 84% 55%, 100% 66%, 100% 100%, 0% 100%);
+        clip-path: polygon( 0% 48%, 10% 52%,20% 58%, 33% 55%, 54% 55%, 70% 60%, 84% 55%, 100% 66%, 100% 100%, 0% 100%);
     }
     50% {
-        clip-path: polygon( 0% 32%, 10% 46%, 33% 68%, 54% 70%, 70% 60%, 84% 45%, 100% 50%, 100% 100%, 0% 100%);
+        clip-path: polygon( 0% 45%, 10% 55%,20% 53%, 33% 68%, 54% 70%, 70% 60%, 84% 45%, 100% 50%, 100% 100%, 0% 100%);
     }
 }
 
@@ -95,7 +103,7 @@ footer h5 {
 .nuestra-pesca__salida {
     display: flex;
     flex-direction: column;
-    color: aliceblue;
+    color: #f5f5f5;
 }
 .nuestra-pesca__salida img {
     width: auto;
@@ -175,7 +183,7 @@ footer h5 {
     margin-top: 1rem;
 }
 .capturas h4 {
-    color: aliceblue;
+    color: #f5f5f5;
     padding: .5rem 0 0 .2rem;
 }
 .capturas__img {
@@ -209,7 +217,6 @@ footer h5 {
 
 /* COMIENZO CSS QUIENES SOMOS */
 .grid-quienes {
-    width: 100%;
     display: grid;
     grid-template-columns: auto;
     grid-template-areas: 'nosotros' 'vista' 'ubicacion';
@@ -222,7 +229,7 @@ footer h5 {
     color: #f5f5f5;
 }
 .nosotros span {
-    color: rgb(250, 249, 249);
+    color: #f5f5f5;
 }
 .vista {
     grid-area: vista;
@@ -237,6 +244,12 @@ footer h5 {
     height: auto;
     border: .1rem solid #e99f17;
     border-radius: .2rem;
+    box-sizing: border-box;
+    transition: all .5s;
+}
+.img-fluid:hover{
+    transform: scale(1.12);
+    border: .2rem solid #080807;
     box-sizing: border-box;
 }
 .ubicacion {
@@ -258,14 +271,11 @@ footer h5 {
 }
 /* FIN CSS QUIENES SOMOS */
 
+
 /* COMIENZO CSS EXCURSIONES */
+
 .locaciones {
     background-color: rgb(16, 131, 160);
-}
-.locaciones h2 {
-    font-size: 1rem;
-    padding-left: .2rem;
-    padding-bottom: .5rem;
 }
 .locaciones ul {
     display: flex;
@@ -281,63 +291,27 @@ footer h5 {
     color: #eceaea;
 }
 .locaciones a:hover{
-    
     color: #eebc18;
     transform: scale(1.1);
 }
-.galeria-locaciones h3 {
-    font-size: 1.3rem;
-    padding-left: .8rem;
-}
-.galeria-locaciones h4 {
-    margin-bottom: 1rem;
-    padding-left: .8rem;
-    margin-top: .2rem;
+.galeria-locaciones{
+    display: flex;
+    flex-direction: column;
 }
 .fotos-locaciones {
     display: grid;
     width: 90%;
-    grid-template-columns: 30% auto 40%;
-    grid-template-rows: auto;
-    grid-auto-rows: auto;
-    margin: .1rem auto;
-    background-color: #023047;
+    margin: auto;
+    grid-template-columns: repeat(auto-fit,minmax(19rem,auto));
+    grid-auto-rows: minmax(18rem,auto);
+    gap: .15rem;
 }
 .fotos-locaciones img {
     width: 100%;
     height: 100%;
+    min-width: 18rem;
     border: .08rem solid rgb(153, 126, 51);
-    max-height: 25rem;
-}
-.goya1 {
-    grid-column: 1/3;
-}
-.goya3 {
-    grid-column-start: span 3;
-    max-height: 25rem;
-}
-.goya4 {
-    grid-column: 1/3;
-}
-.paso1 {
-    grid-column-start: span 2;
-}
-.paso3 {
-    grid-column: 1/3;
-}
-.paso6 {
-    grid-column: span 2;
-}
-.clemente1 {
-    grid-column: span 2;
-}
-.clemente4 {
-    grid-column: span 2;
-}
-.formulario h2 {
-    font-size: 1.5rem;
-    padding-left: .3rem;
-    padding-bottom: .5rem;
+    object-fit:coverz;
 }
 .formulario__datos {
     display: flex;
@@ -465,6 +439,7 @@ footer h5 {
 }
 .comentarios {
     grid-area: comentarios;
+    padding-top: 1rem;
 }
 .comentarios__form{
     display: flex;
@@ -474,12 +449,14 @@ footer h5 {
 footer {
     grid-area: pie;
 }
-/***** INICIO MEDIA QUERY HEADER Y FOOTER *****/z|
+/***** INICIO MEDIA QUERY HEADER Y FOOTER *****/
 @media screen and (max-width: 991px) { 
     header {
         flex-direction: row;
-        justify-content: space-between;
-        
+        justify-content: space-between; 
+    }
+    .navbar{
+        align-items: flex-start;
     }
     .navbar-expand-lg .navbar-nav {
         flex-direction: column;
@@ -490,6 +467,10 @@ footer {
     }
     .navbar-nav{
         align-items: flex-end;
+    }
+    .navbar-toggler{
+        font-size: .8rem;
+        line-height: initial;
     }
 }
 @media screen and (max-width: 650px) {
@@ -502,12 +483,10 @@ footer {
         height: 3rem;
     }
     .cabecera h1 {
-        background-image: linear-gradient(to top, #e99f17,#eaee1a );
         font-size: 3rem;
         text-align:start;  
     }
     .tituloMarea h1 {
-        position: absolute;
         width: calc(100% - 3rem);
     }
     footer ul i{
@@ -517,9 +496,15 @@ footer {
         display: none;
     }
 }
-@media screen and (max-width: 400px) {    
+@media screen and (max-width: 400px) {  
+    .cabecera img {
+        height: 2.4rem;
+    }  
     .cabecera h1 {
         font-size: 2rem; 
+    }
+    .tituloMarea h1 {
+        width: calc(100% - 2.4rem);
     }
 }
 /***** FIN MEDIA QUERY HEADER Y FOOTER *****/
@@ -672,7 +657,6 @@ footer {
         text-align: center;
     }
     .ubicacion__local p {
-        font-size: 1rem;
         text-align: center;
     }
 }
@@ -732,9 +716,4 @@ footer {
     }
 }
 /* INICIO MEDIA QUERY CONTACTO*/
-@media screen and (max-width: 600px) {
-    .comentarios h2{
-        font-size: 1.2rem;
 
-    }
-}
