--- a/style.css/flex-estilo.css
+++ b/style.css/flex-estilo.css
@@ -41,7 +41,7 @@ header {
 }
 .tituloMarea h1 {
     position: absolute;
-    width: calc(100% - 5rem);
+    width: calc(100% - 4.9rem);
 }
 .tituloA {
     color: #1a0505;
@@ -454,13 +454,15 @@ footer {
     header {
         flex-direction: row;
         justify-content: space-between; 
+        height: auto;
     }
     .navbar{
         align-items: flex-start;
+        padding-top: 1.7rem;
     }
     .navbar-expand-lg .navbar-nav {
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: flex-start;
     } 
     .navbar .container-fluid{
         justify-content: flex-end;
@@ -472,7 +474,13 @@ footer {
         font-size: .8rem;
         line-height: initial;
     }
+    dl, ol, ul {
+        margin-top: 0.6rem;
+        margin-bottom: 0.5rem;
+    }
 }
+
+
 @media screen and (max-width: 650px) {
     .cabecera h1 {
         text-align:start;  
@@ -488,6 +496,13 @@ footer {
     }
     .tituloMarea h1 {
         width: calc(100% - 3rem);
+    }
+    .navbar{
+        padding-top: .5rem;
+    }
+    dl, ol, ul {
+        margin-top: 0.1rem;
+        margin-bottom: 0.5rem;
     }
     footer ul i{
         font-size: 3.2vh;
@@ -505,6 +520,10 @@ footer {
     }
     .tituloMarea h1 {
         width: calc(100% - 2.4rem);
+    }
+    .navbar-toggler{
+        font-size: .5rem;
+        
     }
 }
 /***** FIN MEDIA QUERY HEADER Y FOOTER *****/
