--- a/style.css/flex-estilo.css
+++ b/style.css/flex-estilo.css
@@ -62,33 +62,36 @@ header {
 }
 
 /* FOOTER */
-footer {
-    height: 10vh;
+.footer {
+    height: 12vh;
     background-image: linear-gradient(to top, #e99f17,#eaee1a );
     display: flex;
     flex-direction: row;
     justify-content:space-between;
 }
-footer ul {
-    width: 100%;
+.footer__iconos {
+    display: flex;
+    justify-content: center;
+}
+.footer__iconos__lista {
+    
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around   ;
-    height: 10vh;
+    justify-content: space-around  ;
 }
-footer ul li {
+.footer__iconos__lista__listado {
     list-style: none;
     margin-left: 25%; 
 }
-footer ul i{
+.footer__iconos__lista__listado i{
     font-size: 4vh;
     color: #050505;   
 }
 footer h5 {
     font-size: .8rem;
     text-align: center;
-    line-height: 10vh;
+    line-height: 12vh;
 }
 /* FIN FOOTER */
 
@@ -158,7 +161,7 @@ footer h5 {
     justify-content: space-around;
 }
 .permisos__solicitud a {
-    width: 14rem;
+    width: 12rem;
     height: 3rem;
     border: .15rem solid #023047;
     background-color: #e99f17;
@@ -496,7 +499,8 @@ footer {
     }
     .cabecera h1 {
         font-size: 3rem;
-        text-align:start;  
+        text-align:start; 
+        margin-left: 1rem; 
     }
     .tituloMarea h1 {
         width: calc(100% - 3rem);
