--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,15 +6,16 @@
     display: flex;
     flex-direction: column;
     color: $color-texto-llama;
+    & img{
+        width: auto;
+        height: 18rem;
+        border: .1rem solid #023047;
+        border-radius: .3rem;
+        box-sizing: border-box;
+        margin-bottom: 1rem;
+    }
 }
-.nuestra-pesca__salida img{
-    width: auto;
-    height: 18rem;
-    border: .1rem solid #023047;
-    border-radius: .3rem;
-    box-sizing: border-box;
-    margin-bottom: 1rem;
-}
+    
 .normas {
     display: flex;
     justify-content: space-between;
@@ -32,7 +33,7 @@
         line-height: 3rem;
         align-self: center;
         margin-right: 1rem;
-        min-width: 12rem;
+        min-width: 7rem;
         text-decoration: none;
         font-size: 1.1rem;
         transition: all .8s;
@@ -65,6 +66,7 @@
             border-radius: 1.4rem;
             text-align: center;
             line-height: 3rem;
+            align-self: center;
             align-content: space-around;
             min-width: 7rem;
             font-size: 1.1rem;
@@ -135,9 +137,8 @@
     .normas {
         flex-direction: column;
         justify-content: center;
-        padding-bottom: 0rem;
         &__texto{
-            max-width: 90%;
+            max-width: 95%;
             & h4{
                 font-size: 1.3rem;
                 padding-bottom: .5rem;
@@ -148,17 +149,16 @@
             max-width: 100%;
             font-size: .8rem;
         }
-        &__a{
+        &__a a{
             margin: 0 auto;
             min-width: 7rem;
-
         }
     }
     .permisos {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 24rem;
+       
         &__solicitud{
             padding-bottom: 1rem;
             & a{
@@ -182,28 +182,7 @@
         flex-direction: column;
         padding-left: .3rem;
     }
-    
-    .normas {
-        padding-top: 1rem;
-        & a {
-            width: auto;
-            height: 2rem;
-            line-height: 2rem;
-            align-self: center;
-            margin: 0 auto;
-            text-decoration: none;
-            font-size: 1rem;
-        }
-    }
-    .permisos {
-        height: auto;
-        padding-top: .3rem;
-        &__solicitud{
-            height: 6rem;
-        }
-    }
-   
-    .permisos__solicitud a {
+    .normas__a a{   
         width: auto;
         height: 2rem;
         line-height: 2rem;
@@ -212,7 +191,28 @@
         text-decoration: none;
         font-size: 1rem;
     }
-    .permisos iframe {
-        width: auto;
+    .permisos {
+        height: auto;
+        padding-top: .3rem;
+        &__solicitud{
+            height: 6rem;
+            & a{
+                width: auto;
+            height: 2rem;
+            line-height: 2rem;
+            align-self: center;
+            margin: 0 auto;
+            text-decoration: none;
+            font-size: 1rem;
+            }
+        }
+        & iframe{
+            width: auto;
+        }
+    }
+}
+@media screen and (max-width: 400px) {
+    .cabecera h1 {
+        font-size: 2rem;
     }
 }
