--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -149,9 +149,12 @@
             max-width: 100%;
             font-size: .8rem;
         }
-        &__a a{
-            margin: 0 auto;
-            min-width: 7rem;
+        &__a {
+            margin-right: 0;
+            a{
+                margin: 0 auto;
+                min-width: 7rem;
+            }
         }
     }
     .permisos {
@@ -182,14 +185,14 @@
         flex-direction: column;
         padding-left: .3rem;
     }
-    .normas__a a{   
+    .normas__a {   
         width: auto;
         height: 2rem;
         line-height: 2rem;
         align-self: center;
-        margin: 0 auto;
         text-decoration: none;
         font-size: 1rem;
+        margin-right: 0;
     }
     .permisos {
         height: auto;
@@ -198,12 +201,12 @@
             height: 6rem;
             & a{
                 width: auto;
-            height: 2rem;
-            line-height: 2rem;
-            align-self: center;
-            margin: 0 auto;
-            text-decoration: none;
-            font-size: 1rem;
+                height: 2rem;
+                line-height: 2rem;
+                align-self: center;
+                margin: 0 auto;
+                text-decoration: none;
+                font-size: 1rem;
             }
         }
         & iframe{
